tests/miniJava/neg/006162_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { static java [ 0 ] = 0 ; } }
